cmake_minimum_required(VERSION 3.17)
project(cpp-tutorial)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory(hello-world)
add_subdirectory(printing-text)
add_subdirectory(variables)
add_subdirectory(calculator)
add_subdirectory(functions)
add_subdirectory(function-parameters)
add_subdirectory(classes-objects)
add_subdirectory(classes-separate)
add_subdirectory(while-loop)
add_subdirectory(sentinel-controlled-loop)
add_subdirectory(stock-market-simulator)
add_subdirectory(switch-case)
add_subdirectory(random-number-generator)
add_subdirectory(default-parameters)
add_subdirectory(scope-resolution-operator)
add_subdirectory(function-overloading)
add_subdirectory(recursive-factorial)
add_subdirectory(passing-arrays)
add_subdirectory(2d-array)
add_subdirectory(pointers)
add_subdirectory(pointer-passbyref)
add_subdirectory(pointers-math)
add_subdirectory(arrow-member-selection)
add_subdirectory(const-objects)
add_subdirectory(member-initializer)
add_subdirectory(composition)
add_subdirectory(friend-function)
add_subdirectory(this-pointer)
add_subdirectory(operator-overloading)
add_subdirectory(inheritance)
add_subdirectory(derived-constructor)
add_subdirectory(polymorphism)
add_subdirectory(function-templates)
add_subdirectory(class-templates)
add_subdirectory(template-specialization)
add_subdirectory(exceptions)
add_subdirectory(files)
add_subdirectory(writing-file)
add_subdirectory(reading-file)
add_subdirectory(awesome-program)
add_subdirectory(string-handling)